metadata/force-app/main/default/objects/CustomName_JeBAo__c/CustomName_JeBAo__c.object-meta.xml
<CustomObject>
    <description>Description_dLPJD</description>
    <label>CustomLabel_wuwqh</label>
    <nameField>
        <label>CustomLabel_wuwqh</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_wuwqhs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>