metadata/force-app/main/default/objects/CustomName_JeBAo__c/fields/CustomField_aRqfd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aRqfd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVaKIu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>